--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This will contain my config files, PKGBUILD, kernel seeds. More to come.
+This will contain my config files, PKGBUILD, kernel seeds.
