--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This will contain my config files, PKGBUILD, kernel seeds.
+This will contain/contains my config files(dotfiles) and my scripts/microprojects.
